# problemas-omegaUp

./: CMakeLists.txt  Mensajes Secretos - Descripcion de problema.docx  amigos_misteriosos.cpp  automated_checking_machine.cpp  bases_de_3.cpp  buscando_el_mayor.cpp  dibujando_un_corazon.cpp  diferentes_nombres.cpp  divisibilidad_basica.cpp  el_banco.cpp  el_entero_solitario.cpp  el_mayor_impar.py  el_menor_de_tres_numeros.cpp  exam_bidi_3.cpp  fracciones_mixta_a_impropia.cpp  hackers.cpp  invertir_palabras.cpp  las_tareas_de_progra.cpp  lenguaje_x.cpp  letras_del_basta.cpp  leyenda_caracter_perdido.cpp  lychrel_capicuas.cpp  matrices_simples.cpp  matriz_espejo.cpp  mensaje_ascii.cpp  mensajes_drm.cpp  mensajes_secretos.cpp  occ10nssf24.cpp  ordenamiento_zigzag.java  ordenando_letras_linea.cpp  palabra_loca.cpp  palabra_palindroma.cpp  perimetro_de_asteriscos.cpp  piramide_inversa.cpp  prueba_del_nueve.cpp  recortando_palabras.cpp  ruleta_matrices.java  saltando_por_el_arreglo.cpp  shift_cipher.cpp  simulando_display.java  (+7 more)
