cmake_minimum_required(VERSION 3.24)
project(github)

set(CMAKE_CXX_STANDARD 17)

add_executable(github main.cpp mensajes_secretos.cpp sumas_maximas_consecutivas.cpp hackers.cpp fracciones_mixta_a_impropia.cpp suma_de_n.cpp thanos_sort.cpp buscando_el_mayor.cpp el_banco.cpp matriz_espejo.cpp matrices_simples.cpp recortando_palabras.cpp piramide_inversa.cpp palabra_palindroma.cpp palabra_loca.cpp mensaje_ascii.cpp soundex.cpp dibujando_un_corazon.cpp perimetro_de_asteriscos.cpp exam_bidi_3.cpp sugerencias.cpp bases_de_3.cpp occ10nssf24.cpp invertir_palabras.cpp las_tareas_de_progra.cpp shift_cipher.cpp saltando_por_el_arreglo.cpp prueba_del_nueve.cpp el_entero_solitario.cpp mensajes_drm.cpp sumando_numeros_consecutivos.cpp automated_checking_machine.cpp sumatoria_con_salto.cpp el_menor_de_tres_numeros.cpp diferentes_nombres.cpp ordenando_letras_linea.cpp lenguaje_x.cpp lychrel_capicuas.cpp divisibilidad_basica.cpp leyenda_caracter_perdido.cpp letras_del_basta.cpp amigos_misteriosos.cpp)
